--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,57 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>ToDoList</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+
+<body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
+
+
+<!-- 
+credits to dρlυѕρlυѕ
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
+
+<body>
+    <div class="box" id="box_id">
+        <div class="todo" id="to_do">
+            <h1> To-Do</h1>
+            <input type="text" id="new" class="new_act" placeholder="What do you need to do next?">
+            <button class="add_new" onclick="addnew()" for="new"> </button>
+        </div>
+
+        <ul id="list">
+            <li>Learn P5*js</li>
+            <li>Learn kidsCanCode</li>
+            <li>Do Programming Challenge</li>
+            <li>Unplugged activity</li>
+        </ul>
+    </div>
+</body>
+
+</html>
+ -->
